# footbot

./: .gitignore  README.md
auto_soccer_bot/: application.py  ball_detector.py  calibrated_hsv.txt  camera_manager.py  color_manager.py  color_tuner.py  config_auto.py  detection_manager_base.py  main.py  requirements.txt  robot_communicator.py  robot_controller.py
docs/: architecture.md  electronic_design.md  structure.md
docs/en/: api-communication-protocols.md  auto_soccer_bot.md  conclusion.md  esp32cam_robot.md  hardware-power.md  quick_start.md  (+6 more)
esp32cam_robot/: README.md  esp32cam_robot.ino
manual_control/: application.py  camera_manager.py  config.py  detection_manager_base.py  gesture_classifier.py  gesture_controller.py  hand_detector.py  main.py  requirements.txt  robot_communicator.py
opponent-detector/: README.md  main.py  requirements.txt  test_infer.py
simulation/: .gitignore  README.md  requirements-yolo.txt
simulation/ros2_ws/src/footbot_gazebo/: CMakeLists.txt  README.md  package.xml
simulation/ros2_ws/src/footbot_gazebo/config/: ros_gz_bridge.yaml
simulation/ros2_ws/src/footbot_gazebo/models/orange_ball/: model.config  model.sdf
simulation/ros2_ws/src/footbot_gazebo/src/: BallDragSystem.cc
simulation/ros2_ws/src/footbot_gazebo/worlds/: footbot_ball_control.sdf  footbot_ball_control_multi.sdf  footbot_ball_follow.sdf  footbot_camera_test.sdf  footbot_empty.sdf  footbot_opponent_detection.sdf  footbot_reach_goal.sdf  footbot_soccer_field.sdf
slides/: main.tex  script.md
soccer_vision/: README.md  data.yaml  main.py  requirements.txt
(+275 files in other folders)
